--- a/AdvectionCalculationsGUI/AdvectionCalculationsGUI/AdvectionCalculationsGUI.csproj
+++ b/AdvectionCalculationsGUI/AdvectionCalculationsGUI/AdvectionCalculationsGUI.csproj
@@ -89,15 +89,16 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Advection.cs" />
-    <Compile Include="src\Application.cs" />
-    <Compile Include="src\FTLEDataSet.cs" />
     <Compile Include="src\FTLEField.cs" />
     <Compile Include="src\InputDataSet.cs" />
     <Compile Include="src\Interpolator.cs" />
+    <Compile Include="src\OrderedVoxel.cs" />
     <Compile Include="src\Point.cs" />
-    <Compile Include="src\Program.cs" />
     <Compile Include="src\Seed.cs" />
+    <Compile Include="src\SeedPoint.cs" />
     <Compile Include="src\StreamLine.cs" />
+    <Compile Include="src\StreamLines.cs" />
+    <Compile Include="src\Square.cs" />
     <Compile Include="src\Voxel.cs" />
     <EmbeddedResource Include="GUI.resx">
       <DependentUpon>GUI.cs</DependentUpon>
@@ -125,6 +126,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Accord.3.8.0\build\Accord.targets" Condition="Exists('..\packages\Accord.3.8.0\build\Accord.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
