--- a/LCS/Assembly-CSharp.csproj
+++ b/LCS/Assembly-CSharp.csproj
@@ -8,7 +8,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <ProjectGuid>{80383F8B-396F-7BF7-5A0B-BC255B31C82F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -64,24 +65,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\CameraMovement.cs" />
-    <Compile Include="Assets\code\DataSet_DEPRECATED.cs" />
-    <Compile Include="Assets\code\FTLEField_DEPRECATED.cs" />
-    <Compile Include="Assets\code\Interpolator_DEPRECATED.cs" />
-    <Compile Include="Assets\code\Painter_DEPRECATED.cs" />
     <Compile Include="Assets\code\Point.cs" />
-    <Compile Include="Assets\code\Point_DEPRECATED.cs" />
-    <Compile Include="Assets\code\Seed_DEPRECATED.cs" />
     <Compile Include="Assets\code\SeedPoint.cs" />
     <Compile Include="Assets\code\Square.cs" />
     <Compile Include="Assets\code\SquareSimplified.cs" />
-    <Compile Include="Assets\code\StartUp_DEPRECATED.cs" />
-    <Compile Include="Assets\code\StreamLine_DEPRECATED.cs" />
     <Compile Include="Assets\code\Surface.cs" />
-    <Compile Include="Assets\code\Surface_DEPRECATED.cs" />
-    <Compile Include="Assets\code\Triangle.cs" />
-    <Compile Include="Assets\code\Triangulation_DEPRECATED.cs" />
     <Compile Include="Assets\code\Visualization.cs" />
-    <Compile Include="Assets\Test.cs" />
     <None Include="Assets\VertexColored.shader" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>D:/UnityWS/unity3d-master/LCS/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
